@@ -1,27 +1,31 @@
 package com.gtocore.common.machine.multiblock.part.ae;
 
+import com.gtocore.api.gui.configurators.MultiMachineModeFancyConfigurator;
+import com.gtocore.common.data.GTORecipeTypes;
 import com.gtocore.common.data.machines.GTAEMachines;
-import com.gtocore.common.machine.multiblock.part.ae.slots.MECircuitHandler;
 import com.gtocore.common.machine.trait.InternalSlotRecipeHandler;
 
 import com.gtolib.api.ae2.MyPatternDetailsHelper;
-import com.gtolib.api.annotation.Scanned;
+import com.gtolib.api.annotation.DataGeneratorScanned;
 import com.gtolib.api.annotation.language.RegisterLanguage;
 import com.gtolib.api.capability.ISync;
-import com.gtolib.api.machine.feature.multiblock.IExtendedRecipeCapabilityHolder;
-import com.gtolib.api.machine.trait.IEnhancedRecipeLogic;
 import com.gtolib.api.machine.trait.NotifiableNotConsumableFluidHandler;
 import com.gtolib.api.machine.trait.NotifiableNotConsumableItemHandler;
+import com.gtolib.api.network.SyncManagedFieldHolder;
 import com.gtolib.api.recipe.Recipe;
+import com.gtolib.api.recipe.RecipeBuilder;
+import com.gtolib.api.recipe.RecipeType;
 import com.gtolib.api.recipe.ingredient.FastFluidIngredient;
 import com.gtolib.api.recipe.ingredient.FastSizedIngredient;
-import com.gtolib.syncdata.SyncManagedFieldHolder;
-import com.gtolib.utils.MathUtil;
+import com.gtolib.utils.ExpandedR2LMap;
+import com.gtolib.utils.GTOUtils;
+import com.gtolib.utils.RLUtils;
 
 import com.gregtechceu.gtceu.api.blockentity.MetaMachineBlockEntity;
 import com.gregtechceu.gtceu.api.capability.recipe.IO;
 import com.gregtechceu.gtceu.api.gui.GuiTextures;
 import com.gregtechceu.gtceu.api.gui.fancy.ConfiguratorPanel;
+import com.gregtechceu.gtceu.api.gui.fancy.TabsWidget;
 import com.gregtechceu.gtceu.api.machine.MetaMachine;
 import com.gregtechceu.gtceu.api.machine.MultiblockMachineDefinition;
 import com.gregtechceu.gtceu.api.machine.fancyconfigurator.ButtonConfigurator;
@@ -29,25 +33,34 @@ import com.gregtechceu.gtceu.api.machine.fancyconfigurator.CircuitFancyConfigura
 import com.gregtechceu.gtceu.api.machine.fancyconfigurator.FancyInvConfigurator;
 import com.gregtechceu.gtceu.api.machine.fancyconfigurator.FancyTankConfigurator;
 import com.gregtechceu.gtceu.api.machine.feature.IDataStickInteractable;
+import com.gregtechceu.gtceu.api.machine.feature.IRecipeLogicMachine;
 import com.gregtechceu.gtceu.api.machine.feature.multiblock.IMultiController;
+import com.gregtechceu.gtceu.api.machine.trait.CircuitHandler;
+import com.gregtechceu.gtceu.api.machine.trait.NotifiableItemStackHandler;
 import com.gregtechceu.gtceu.api.machine.trait.RecipeHandlerList;
+import com.gregtechceu.gtceu.api.recipe.GTRecipeType;
 import com.gregtechceu.gtceu.api.recipe.ingredient.FluidIngredient;
+import com.gregtechceu.gtceu.api.recipe.lookup.IntIngredientMap;
+import com.gregtechceu.gtceu.api.transfer.item.LockableItemStackHandler;
 import com.gregtechceu.gtceu.common.data.GTItems;
 import com.gregtechceu.gtceu.common.item.IntCircuitBehaviour;
-import com.gregtechceu.gtceu.utils.ItemStackHashStrategy;
+import com.gregtechceu.gtceu.utils.TaskHandler;
+import com.gregtechceu.gtceu.utils.collection.OpenCacheHashSet;
 
 import net.minecraft.MethodsReturnNonnullByDefault;
 import net.minecraft.core.BlockPos;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.nbt.ListTag;
+import net.minecraft.nbt.StringTag;
 import net.minecraft.nbt.Tag;
 import net.minecraft.network.chat.Component;
+import net.minecraft.network.chat.MutableComponent;
 import net.minecraft.server.TickTask;
+import net.minecraft.server.level.ServerLevel;
 import net.minecraft.world.InteractionResult;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.Ingredient;
-import net.minecraftforge.fluids.FluidStack;
 
 import appeng.api.config.Actionable;
 import appeng.api.crafting.IPatternDetails;
@@ -57,6 +70,7 @@ import appeng.api.stacks.*;
 import appeng.api.storage.MEStorage;
 import appeng.api.storage.StorageHelper;
 import appeng.crafting.pattern.AEProcessingPattern;
+import appeng.crafting.pattern.EncodedPatternItem;
 import appeng.crafting.pattern.ProcessingPatternItem;
 import com.hepdd.gtmthings.common.item.VirtualItemProviderBehavior;
 import com.hepdd.gtmthings.data.CustomItems;
@@ -66,27 +80,21 @@ import com.lowdragmc.lowdraglib.gui.widget.LabelWidget;
 import com.lowdragmc.lowdraglib.gui.widget.WidgetGroup;
 import com.lowdragmc.lowdraglib.syncdata.annotation.DescSynced;
 import com.lowdragmc.lowdraglib.syncdata.annotation.Persisted;
-import com.lowdragmc.lowdraglib.syncdata.field.ManagedFieldHolder;
-import it.unimi.dsi.fastutil.objects.*;
+import it.unimi.dsi.fastutil.objects.ObjectArrayList;
+import it.unimi.dsi.fastutil.objects.ReferenceOpenHashSet;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
-import org.jetbrains.annotations.UnmodifiableView;
 
-import java.util.Collections;
-import java.util.List;
-import java.util.Objects;
-import java.util.Set;
-import java.util.function.Predicate;
+import java.util.*;
+import java.util.stream.Stream;
 
 import javax.annotation.ParametersAreNonnullByDefault;
 
-@Scanned
+@DataGeneratorScanned
 @ParametersAreNonnullByDefault
 @MethodsReturnNonnullByDefault
 public class MEPatternBufferPartMachine extends MEPatternPartMachineKt<MEPatternBufferPartMachine.InternalSlot> implements IDataStickInteractable {
 
-    protected static final ManagedFieldHolder MANAGED_FIELD_HOLDER = new ManagedFieldHolder(
-            MEPatternBufferPartMachine.class, MEPatternPartMachineKt.Companion.getMANAGED_FIELD_HOLDER());
     private static final SyncManagedFieldHolder SYNC_MANAGED_FIELD_HOLDER = new SyncManagedFieldHolder(MEPatternBufferPartMachine.class,
             MEPatternPartMachineKt.getSYNC_MANAGED_FIELD_HOLDER());
     @RegisterLanguage(cn = "配方已缓存", en = "Recipe cached")
@@ -96,6 +104,13 @@ public class MEPatternBufferPartMachine extends MEPatternPartMachineKt<MEPattern
     @RegisterLanguage(cn = "总成共享配置", en = "Buffer share configuration")
     private static final String SHARE = "gtocore.pattern_buffer.share";
 
+    @Persisted
+    @DescSynced
+    private final ArrayList<GTRecipeType> recipeTypes = new ArrayList<>();
+    @Persisted
+    @DescSynced
+    public GTRecipeType recipeType = GTORecipeTypes.HATCH_COMBINED;
+
     @DescSynced
     private final boolean[] caches;
     @Persisted
@@ -103,10 +118,10 @@ public class MEPatternBufferPartMachine extends MEPatternPartMachineKt<MEPattern
     @Persisted
     public final NotifiableNotConsumableFluidHandler shareTank;
     @Persisted
-    public final MECircuitHandler circuitInventorySimulated;
+    public final NotifiableItemStackHandler circuitInventorySimulated;
 
     @Persisted
-    private final Set<BlockPos> proxies = new ObjectOpenHashSet<>();
+    private final Set<BlockPos> proxies = new OpenCacheHashSet<>();
     private final Set<MEPatternBufferProxyPartMachine> proxyMachines = new ReferenceOpenHashSet<>();
     public final InternalSlotRecipeHandler internalRecipeHandler;
 
@@ -125,16 +140,6 @@ public class MEPatternBufferPartMachine extends MEPatternPartMachineKt<MEPattern
         return SYNC_MANAGED_FIELD_HOLDER;
     }
 
-    @Override
-    public void onLoad() {
-        super.onLoad();
-    }
-
-    @Override
-    public void onUnload() {
-        super.onUnload();
-    }
-
     protected ConfiguratorPanel configuratorPanel;
 
     public MEPatternBufferPartMachine(MetaMachineBlockEntity holder, int maxPatternCount) {
@@ -142,12 +147,14 @@ public class MEPatternBufferPartMachine extends MEPatternPartMachineKt<MEPattern
         this.caches = new boolean[maxPatternCount];
         this.shareInventory = createShareInventory();
         this.shareTank = new NotifiableNotConsumableFluidHandler(this, 9, 64000);
-        this.circuitInventorySimulated = new MECircuitHandler(this);
+        this.circuitInventorySimulated = CircuitHandler.create(this);
         this.internalRecipeHandler = new InternalSlotRecipeHandler(this, getInternalInventory());
     }
 
     NotifiableNotConsumableItemHandler createShareInventory() {
-        return new NotifiableNotConsumableItemHandler(this, 9, IO.NONE);
+        var h = new NotifiableNotConsumableItemHandler(this, 9, IO.NONE);
+        h.setFilter(stack -> !(stack.getItem() instanceof EncodedPatternItem));
+        return h;
     }
 
     @Override
@@ -157,6 +164,16 @@ public class MEPatternBufferPartMachine extends MEPatternPartMachineKt<MEPattern
 
     @Override
     public boolean patternFilter(ItemStack stack) {
+        if (stack.getOrCreateTag().tags.get("recipe") instanceof StringTag stringTag) {
+            var recipe = RecipeBuilder.RECIPE_MAP.get(RLUtils.parse(stringTag.getAsString()));
+            if (recipe != null) {
+                if (recipeType == GTORecipeTypes.HATCH_COMBINED) {
+                    if (!recipeTypes.isEmpty() && !RecipeType.available(recipe.recipeType, recipeTypes.toArray(new GTRecipeType[0]))) return false;
+                } else if (!RecipeType.available(recipe.recipeType, recipeType)) {
+                    return false;
+                }
+            }
+        }
         return stack.getItem() instanceof ProcessingPatternItem;
     }
 
@@ -180,17 +197,16 @@ public class MEPatternBufferPartMachine extends MEPatternPartMachineKt<MEPattern
         proxyMachines.remove(proxy);
     }
 
-    @UnmodifiableView
     public Set<MEPatternBufferProxyPartMachine> getProxies() {
         if (proxyMachines.size() != proxies.size() && getLevel() != null) {
             proxyMachines.clear();
             for (var pos : proxies) {
                 if (MetaMachine.getMachine(getLevel(), pos) instanceof MEPatternBufferProxyPartMachine proxy) {
-                    proxyMachines.add(proxy);
+                    proxy.setBuffer(getPos());
                 }
             }
         }
-        return Collections.unmodifiableSet(proxyMachines);
+        return proxyMachines;
     }
 
     private void refundAll(ClickData clickData) {
@@ -201,40 +217,122 @@ public class MEPatternBufferPartMachine extends MEPatternPartMachineKt<MEPattern
         }
     }
 
+    private void changeMode(@Nullable GTRecipeType type) {
+        this.recipeType = type == null ? GTORecipeTypes.HATCH_COMBINED : type;
+        for (var i : getInternalInventory()) {
+            i.rhl.external.recipeType = type;
+        }
+    }
+
+    @Override
+    public void onLoad() {
+        super.onLoad();
+        if (recipeType == GTORecipeTypes.DUMMY_RECIPES) {
+            recipeType = GTORecipeTypes.HATCH_COMBINED;
+        }
+        var type = recipeType == GTORecipeTypes.HATCH_COMBINED ? null : recipeType;
+        for (var i : getInternalInventory()) {
+            i.rhl.external.recipeType = type;
+        }
+    }
+
+    @Override
+    public void onPaintingColorChanged(int color) {
+        super.onPaintingColorChanged(color);
+        if (getLevel() instanceof ServerLevel serverLevel) {
+            TaskHandler.enqueueServerTask(serverLevel, () -> {
+                var type = recipeType == GTORecipeTypes.HATCH_COMBINED ? null : recipeType;
+                for (var i : getInternalInventory()) {
+                    i.rhl.external.recipeType = type;
+                }
+            }, 1);
+        }
+    }
+
+    @Override
+    public void attachSideTabs(TabsWidget sideTabs) {
+        super.attachSideTabs(sideTabs);
+        sideTabs.attachSubTab(new MultiMachineModeFancyConfigurator(recipeTypes, recipeType, this::changeMode));
+    }
+
+    @Override
+    public void addedToController(@NotNull IMultiController controller) {
+        super.addedToController(controller);
+        this.recipeTypes.clear();
+        this.recipeTypes.addAll(MultiMachineModeFancyConfigurator.extractRecipeTypes(this.getControllers()));
+    }
+
+    @Override
+    public void removedFromController(@NotNull IMultiController controller) {
+        super.removedFromController(controller);
+        this.recipeTypes.clear();
+        this.recipeTypes.addAll(MultiMachineModeFancyConfigurator.extractRecipeTypes(this.getControllers()));
+    }
+
+    @Override
+    public void onPatternChange(int index) {
+        getInternalInventory()[index].setLock(false);
+        super.onPatternChange(index);
+    }
+
+    @Override
+    public boolean pushPattern(IPatternDetails patternDetails, KeyCounter[] inputHolder) {
+        var slot = getDetailsSlotMap().get(patternDetails);
+        if (slot != null) {
+            return slot.pushPattern(patternDetails, inputHolder);
+        }
+        return false;
+    }
+
+    @Override
+    public @Nullable IPatternDetails decodePattern(ItemStack stack, int index) {
+        var pattern = super.decodePattern(stack, index);
+        if (pattern == null) return null;
+        if (!caches[index] && stack.getOrCreateTag().tags.get("recipe") instanceof StringTag stringTag) {
+            var recipe = RecipeBuilder.RECIPE_MAP.get(RLUtils.parse(stringTag.getAsString()));
+            getInternalInventory()[index].setRecipe(recipe);
+        }
+        return pattern;
+    }
+
     @Override
     public IPatternDetails convertPattern(IPatternDetails pattern, int index) {
         if (pattern instanceof AEProcessingPattern processingPattern) {
             var sparseInput = processingPattern.getSparseInputs();
             var input = new ObjectArrayList<GenericStack>(sparseInput.length);
+            var in = 0;
+            var slot = getInternalInventory()[index];
+            var locked = false;
             for (var stack : sparseInput) {
-                if (stack != null && stack.what() instanceof AEItemKey what) {
-                    if (what.getItem() == CustomItems.VIRTUAL_ITEM_PROVIDER.get()) {
-                        ItemStack virtualItem = VirtualItemProviderBehavior.getVirtualItem(what.getReadOnlyStack());
-                        if (virtualItem.isEmpty()) continue;
-                        if (GTItems.PROGRAMMED_CIRCUIT.isIn(virtualItem)) {
-                            getInternalInventory()[index].circuitInventory.storage.setStackInSlot(0, virtualItem);
-                            continue;
-                        } else {
-                            var grid = getGrid();
-                            if (grid != null) {
-                                if (grid.getStorageService().getInventory().extract(AEItemKey.of(virtualItem), 1, Actionable.MODULATE, getActionSource()) == 1) {
-                                    var storage = getInternalInventory()[index].shareInventory.storage;
-                                    var slot = storage.getStackInSlot(0);
-                                    if (!slot.isEmpty()) grid.getStorageService().getInventory().insert(AEItemKey.of(slot), slot.getCount(), Actionable.MODULATE, getActionSource());
-                                    getInternalInventory()[index].shareInventory.storage.setStackInSlot(0, virtualItem);
-                                    continue;
-                                }
+                if (stack != null && stack.what() instanceof AEItemKey what && what.getItem() == CustomItems.VIRTUAL_ITEM_PROVIDER.get() && what.getTag() != null && what.getTag().tags.containsKey("n")) {
+                    ItemStack virtualItem = VirtualItemProviderBehavior.getVirtualItem(what.getReadOnlyStack());
+                    if (virtualItem.isEmpty()) continue;
+                    if (GTItems.PROGRAMMED_CIRCUIT.isIn(virtualItem)) {
+                        slot.circuitInventory.storage.setStackInSlot(0, virtualItem);
+                    } else {
+                        var grid = getGrid();
+                        if (grid != null && grid.getStorageService().getInventory().extract(what, 1, Actionable.SIMULATE, getActionSource()) == 1) {
+                            if (!locked) {
+                                slot.setLock(true);
+                                locked = true;
                             }
+                            var storage = slot.shareInventory.storage;
+                            var inSlot = storage.getStackInSlot(in);
+                            if (!inSlot.isEmpty()) {
+                                storage.setStackInSlot(in, ItemStack.EMPTY);
+                                grid.getStorageService().getInventory().insert(AEItemKey.of(inSlot), inSlot.getCount(), Actionable.MODULATE, getActionSource());
+                            }
+                            storage.setStackInSlot(in, virtualItem);
+                            in++;
                         }
                     }
+                    continue;
                 }
                 input.add(stack);
             }
             if (input.size() < sparseInput.length) {
-                AEItemKey key = AEItemKey.of(PatternDetailsHelper.encodeProcessingPattern(input.toArray(new GenericStack[0]), processingPattern.getSparseOutputs()));
-                synchronized (MyPatternDetailsHelper.CACHE) {
-                    return MyPatternDetailsHelper.CACHE.computeIfAbsent(key, k -> new AEProcessingPattern(key));
-                }
+                var stack = PatternDetailsHelper.encodeProcessingPattern(input.toArray(new GenericStack[0]), processingPattern.getSparseOutputs());
+                return MyPatternDetailsHelper.CACHE.get(AEItemKey.of(stack));
             }
         }
         return pattern;
@@ -269,19 +367,36 @@ public class MEPatternBufferPartMachine extends MEPatternPartMachineKt<MEPattern
         if (isFormed()) {
             IMultiController controller = getControllers().first();
             MultiblockMachineDefinition controllerDefinition = controller.self().getDefinition();
+            GTRecipeType rt = this.recipeType;
+            MutableComponent lidComp = null;
+
+            if (rt == null)
+                rt = controller instanceof IRecipeLogicMachine rlm ? rlm.getRecipeType() : null;
+            if (rt == null || rt == GTORecipeTypes.HATCH_COMBINED) {
+                rt = null;
+                lidComp = (controller instanceof IRecipeLogicMachine rlm ? Stream.of(rlm.getRecipeTypes()) : Stream.<GTRecipeType>empty())
+                        .map(r -> Component.translatable("gtceu." + r.registryName.getPath()))
+                        .collect(GTOUtils.joiningComponent(Component.literal("/")));
+
+            }
+
+            String lid = rt != null ? rt.registryName.toLanguageKey() : controllerDefinition.getDescriptionId();
+
             if (!getCustomName().isEmpty()) {
                 return new PatternContainerGroup(AEItemKey.of(controllerDefinition.asStack()), Component.literal(getCustomName()), Collections.emptyList());
             } else {
                 ItemStack circuitStack = circuitInventorySimulated.storage.getStackInSlot(0);
                 int circuitConfiguration = circuitStack.isEmpty() ? -1 : IntCircuitBehaviour.getCircuitConfiguration(circuitStack);
-                Component groupName = circuitConfiguration != -1 ? Component.translatable(controllerDefinition.getDescriptionId()).append(" - " + circuitConfiguration) : Component.translatable(controllerDefinition.getDescriptionId());
-                return new PatternContainerGroup(AEItemKey.of(controllerDefinition.asStack()), groupName, Collections.emptyList());
+                MutableComponent groupName = lidComp != null ? lidComp : Component.translatable(lid);
+                if (circuitConfiguration != -1) groupName = groupName.append(" - " + circuitConfiguration);
+                return new PatternContainerGroup(AEItemKey.of(controllerDefinition.asStack()), groupName,
+                        lidComp != null ? List.of(Component.translatable(lid)) : Collections.emptyList());
             }
         } else {
             if (!getCustomName().isEmpty()) {
-                return new PatternContainerGroup(AEItemKey.of(GTAEMachines.ME_PATTERN_BUFFER.getItem()), Component.literal(getCustomName()), Collections.emptyList());
+                return new PatternContainerGroup(AEItemKey.of(GTAEMachines.ME_PATTERN_BUFFER.asItem()), Component.literal(getCustomName()), Collections.emptyList());
             } else {
-                return new PatternContainerGroup(AEItemKey.of(GTAEMachines.ME_PATTERN_BUFFER.getItem()), GTAEMachines.ME_PATTERN_BUFFER.get().getDefinition().getItem().getDescription(), Collections.emptyList());
+                return new PatternContainerGroup(AEItemKey.of(GTAEMachines.ME_PATTERN_BUFFER.asItem()), GTAEMachines.ME_PATTERN_BUFFER.get().getDefinition().asItem().getDescription(), Collections.emptyList());
             }
         }
     }
@@ -293,11 +408,6 @@ public class MEPatternBufferPartMachine extends MEPatternPartMachineKt<MEPattern
         configuratorPanel.attachConfigurators(new CircuitFancyConfigurator(circuitInventorySimulated.storage));
         configuratorPanel.attachConfigurators(new FancyInvConfigurator(shareInventory.storage, Component.translatable("gui.gtceu.share_inventory.title")).setTooltips(List.of(Component.translatable("gui.gtceu.share_inventory.desc.0"), Component.translatable("gui.gtceu.share_inventory.desc.1"))));
         configuratorPanel.attachConfigurators(new FancyTankConfigurator(shareTank.getStorages(), Component.translatable("gui.gtceu.share_tank.title")).setTooltips(List.of(Component.translatable("gui.gtceu.share_tank.desc.0"), Component.translatable("gui.gtceu.share_inventory.desc.1"))));
-    }
-
-    @Override
-    public ManagedFieldHolder getFieldHolder() {
-        return MANAGED_FIELD_HOLDER;
     }
 
     @Override
@@ -329,14 +439,14 @@ public class MEPatternBufferPartMachine extends MEPatternPartMachineKt<MEPattern
         return InteractionResult.SUCCESS;
     }
 
-    public record BufferData(Object2LongMap<ItemStack> items, Object2LongMap<FluidStack> fluids) {}
+    public record BufferData(ExpandedR2LMap<AEItemKey> items, ExpandedR2LMap<AEFluidKey> fluids) {}
 
     public BufferData mergeInternalSlots() {
-        var items = new Object2LongOpenCustomHashMap<>(ItemStackHashStrategy.ITEM_AND_TAG);
-        var fluids = new Object2LongOpenHashMap<FluidStack>();
+        var items = new ExpandedR2LMap<AEItemKey>();
+        var fluids = new ExpandedR2LMap<AEFluidKey>();
         for (InternalSlot slot : getInternalInventory()) {
-            slot.itemInventory.object2LongEntrySet().fastForEach(e -> items.addTo(e.getKey(), e.getLongValue()));
-            slot.fluidInventory.object2LongEntrySet().fastForEach(e -> fluids.addTo(e.getKey(), e.getLongValue()));
+            slot.itemInventory.reference2LongEntrySet().fastForEach(e -> items.addTo(e.getKey(), e.getLongValue()));
+            slot.fluidInventory.reference2LongEntrySet().fastForEach(e -> fluids.addTo(e.getKey(), e.getLongValue()));
         }
         return new BufferData(items, fluids);
     }
@@ -344,27 +454,43 @@ public class MEPatternBufferPartMachine extends MEPatternPartMachineKt<MEPattern
     public static final class InternalSlot extends AbstractInternalSlot {
 
         public InternalSlotRecipeHandler.AbstractRHL rhl;
-        private Recipe recipe;
-        private final MEPatternBufferPartMachine machine;
+        public Recipe recipe;
+        public final MEPatternBufferPartMachine machine;
         public final int index;
-        final InputSink inputSink;
+        private final InputSink inputSink;
         private Runnable onContentsChanged = () -> {};
-        public final Object2LongOpenCustomHashMap<ItemStack> itemInventory = new Object2LongOpenCustomHashMap<>(ItemStackHashStrategy.ITEM);
-        public final Object2LongOpenHashMap<FluidStack> fluidInventory = new Object2LongOpenHashMap<>();
-        private Object[] itemStacks = null;
-        private Object[] fluidStacks = null;
+        public boolean itemChanged = true;
+        public boolean fluidChanged = true;
+        public final IntIngredientMap itemIngredientMap = new IntIngredientMap();
+        public final IntIngredientMap fluidIngredientMap = new IntIngredientMap();
+        public final ExpandedR2LMap<AEItemKey> itemInventory = new ExpandedR2LMap<>();
+        public final ExpandedR2LMap<AEFluidKey> fluidInventory = new ExpandedR2LMap<>();
 
         public final NotifiableNotConsumableItemHandler shareInventory;
         public final NotifiableNotConsumableFluidHandler shareTank;
-        public final MECircuitHandler circuitInventory;
+        public final NotifiableItemStackHandler circuitInventory;
+        final LockableItemStackHandler lockableInventory;
+        private boolean lock;
 
         private InternalSlot(MEPatternBufferPartMachine machine, int index) {
             this.machine = machine;
             this.index = index;
             this.shareInventory = machine.createShareInventory();
             this.shareTank = new NotifiableNotConsumableFluidHandler(machine, 9, 64000);
-            this.circuitInventory = new MECircuitHandler(machine);
+            this.circuitInventory = CircuitHandler.create(machine);
             this.inputSink = new InputSink(this);
+            this.lockableInventory = new LockableItemStackHandler(shareInventory.storage);
+        }
+
+        public void setLock(boolean lock) {
+            if (this.lock) {
+                circuitInventory.storage.setStackInSlot(0, ItemStack.EMPTY);
+                for (int i = 0; i < 9; i++) {
+                    shareInventory.setStackInSlot(i, ItemStack.EMPTY);
+                }
+            }
+            this.lock = lock;
+            lockableInventory.setLock(lock);
         }
 
         public void setRecipe(@Nullable Recipe recipe) {
@@ -376,50 +502,20 @@ public class MEPatternBufferPartMachine extends MEPatternPartMachineKt<MEPattern
             return itemInventory.isEmpty() && fluidInventory.isEmpty();
         }
 
-        private void onContentsChanged() {
-            itemStacks = null;
-            fluidStacks = null;
-            onContentsChanged.run();
-        }
-
-        public Object[] getItems() {
-            if (itemStacks == null) {
-                List<ItemStack> stacks = new ObjectArrayList<>(itemInventory.size());
-                itemInventory.object2LongEntrySet().fastForEach(e -> {
-                    e.getKey().setCount(MathUtil.saturatedCast(e.getLongValue()));
-                    stacks.add(e.getKey());
-                });
-                itemStacks = stacks.toArray();
-            }
-            return itemStacks;
-        }
-
-        public Object[] getFluids() {
-            if (fluidStacks == null) {
-                List<FluidStack> stacks = new ObjectArrayList<>(fluidInventory.size());
-                fluidInventory.object2LongEntrySet().fastForEach(e -> {
-                    e.getKey().setAmount(MathUtil.saturatedCast(e.getLongValue()));
-                    stacks.add(e.getKey());
-                });
-                fluidStacks = stacks.toArray();
-            }
-            return fluidStacks;
-        }
-
         private void refund() {
             var network = machine.getMainNode().getGrid();
             if (network != null) {
                 MEStorage networkInv = network.getStorageService().getInventory();
                 var energy = network.getEnergyService();
-                for (var it = itemInventory.object2LongEntrySet().fastIterator(); it.hasNext();) {
+                for (var it = itemInventory.reference2LongEntrySet().fastIterator(); it.hasNext();) {
                     var entry = it.next();
-                    var stack = entry.getKey();
+
                     var count = entry.getLongValue();
-                    if (stack.isEmpty() || count == 0) {
+                    if (count == 0) {
                         it.remove();
                         continue;
                     }
-                    var key = AEItemKey.of(stack);
+                    var key = entry.getKey();
                     if (key == null) continue;
                     long inserted = StorageHelper.poweredInsert(energy, networkInv, key, count, machine.getActionSourceField());
                     if (inserted > 0) {
@@ -428,15 +524,14 @@ public class MEPatternBufferPartMachine extends MEPatternPartMachineKt<MEPattern
                         else entry.setValue(count);
                     }
                 }
-                for (var it = fluidInventory.object2LongEntrySet().fastIterator(); it.hasNext();) {
+                for (var it = fluidInventory.reference2LongEntrySet().fastIterator(); it.hasNext();) {
                     var entry = it.next();
-                    var stack = entry.getKey();
                     var amount = entry.getLongValue();
-                    if (stack.isEmpty() || amount == 0) {
+                    if (amount == 0) {
                         it.remove();
                         continue;
                     }
-                    var key = AEFluidKey.of(stack);
+                    var key = entry.getKey();
                     if (key == null) continue;
                     long inserted = StorageHelper.poweredInsert(energy, networkInv, key, amount, machine.getActionSourceField());
                     if (inserted > 0) {
@@ -445,7 +540,9 @@ public class MEPatternBufferPartMachine extends MEPatternPartMachineKt<MEPattern
                         else entry.setValue(amount);
                     }
                 }
-                onContentsChanged();
+                itemChanged = true;
+                fluidChanged = true;
+                onContentsChanged.run();
             }
         }
 
@@ -458,22 +555,9 @@ public class MEPatternBufferPartMachine extends MEPatternPartMachineKt<MEPattern
         @Override
         public boolean pushPattern(IPatternDetails patternDetails, KeyCounter[] inputHolder) {
             patternDetails.pushInputsToExternalInventory(inputHolder, inputSink);
-            if (recipe != null) {
-                for (var controller : machine.getControllers()) {
-                    if (controller instanceof IExtendedRecipeCapabilityHolder holder && holder.getRecipeLogic() instanceof IEnhancedRecipeLogic enhancedRecipeLogic) {
-                        enhancedRecipeLogic.gtolib$getRecipeCache().put(recipe, rhl.rhl);
-                    }
-                }
-                for (var proxy : machine.proxyMachines) {
-                    var rhl = (InternalSlotRecipeHandler.AbstractRHL) proxy.getProxySlotRecipeHandler().getProxySlotHandlers().get(index);
-                    for (var controller : proxy.getControllers()) {
-                        if (controller instanceof IExtendedRecipeCapabilityHolder holder && holder.getRecipeLogic() instanceof IEnhancedRecipeLogic enhancedRecipeLogic) {
-                            enhancedRecipeLogic.gtolib$getRecipeCache().put(recipe, rhl.rhl);
-                        }
-                    }
-                }
-            }
-            onContentsChanged();
+            itemChanged = true;
+            fluidChanged = true;
+            onContentsChanged.run();
             return true;
         }
 
@@ -489,9 +573,9 @@ public class MEPatternBufferPartMachine extends MEPatternPartMachineKt<MEPattern
                 long amount;
                 if (ingredient instanceof FastSizedIngredient si) amount = si.getAmount();
                 else amount = 1;
-                for (var it2 = itemInventory.object2LongEntrySet().fastIterator(); it2.hasNext();) {
+                for (var it2 = itemInventory.reference2LongEntrySet().fastIterator(); it2.hasNext();) {
                     var entry = it2.next();
-                    if (!ingredient.test(entry.getKey())) continue;
+                    if (!ingredient.test(entry.getKey().getReadOnlyStack())) continue;
                     var count = entry.getLongValue();
                     long extracted = Math.min(count, amount);
                     if (!simulate && extracted > 0) {
@@ -508,8 +592,9 @@ public class MEPatternBufferPartMachine extends MEPatternPartMachineKt<MEPattern
                 }
             }
             if (changed) {
-                itemStacks = null;
-                fluidStacks = null;
+                itemChanged = true;
+                fluidChanged = true;
+                onContentsChanged.run();
             }
             return left.isEmpty() ? null : left;
         }
@@ -524,9 +609,9 @@ public class MEPatternBufferPartMachine extends MEPatternPartMachineKt<MEPattern
                     continue;
                 }
                 long amount = FastFluidIngredient.getAmount(ingredient);
-                for (var it2 = fluidInventory.object2LongEntrySet().fastIterator(); it2.hasNext();) {
+                for (var it2 = fluidInventory.reference2LongEntrySet().fastIterator(); it2.hasNext();) {
                     var entry = it2.next();
-                    if (!ingredient.test(entry.getKey())) continue;
+                    if (!FastFluidIngredient.testAeKay(ingredient, entry.getKey())) continue;
                     var count = entry.getLongValue();
                     long extracted = Math.min(count, amount);
                     if (!simulate && extracted > 0) {
@@ -543,8 +628,9 @@ public class MEPatternBufferPartMachine extends MEPatternPartMachineKt<MEPattern
                 }
             }
             if (changed) {
-                itemStacks = null;
-                fluidStacks = null;
+                itemChanged = true;
+                fluidChanged = true;
+                onContentsChanged.run();
             }
             return left.isEmpty() ? null : left;
         }
@@ -556,28 +642,37 @@ public class MEPatternBufferPartMachine extends MEPatternPartMachineKt<MEPattern
                 tag.put("recipe", recipe.serializeNBT());
             }
             ListTag itemsTag = new ListTag();
-            for (ObjectIterator<Object2LongMap.Entry<ItemStack>> it = itemInventory.object2LongEntrySet().fastIterator(); it.hasNext();) {
+            for (var it = itemInventory.reference2LongEntrySet().fastIterator(); it.hasNext();) {
                 var entry = it.next();
-                var ct = entry.getKey().serializeNBT();
+                var ct = entry.getKey().toTag();
                 ct.putLong("real", entry.getLongValue());
                 itemsTag.add(ct);
             }
             if (!itemsTag.isEmpty()) tag.put("inventory", itemsTag);
             ListTag fluidsTag = new ListTag();
-            for (ObjectIterator<Object2LongMap.Entry<FluidStack>> it = fluidInventory.object2LongEntrySet().fastIterator(); it.hasNext();) {
+            for (var it = fluidInventory.reference2LongEntrySet().fastIterator(); it.hasNext();) {
                 var entry = it.next();
-                var ct = entry.getKey().writeToNBT(new CompoundTag());
+                var ct = entry.getKey().toTag();
                 ct.putLong("real", entry.getLongValue());
                 fluidsTag.add(ct);
             }
             if (!fluidsTag.isEmpty()) tag.put("fluidInventory", fluidsTag);
-            tag.put("inv", shareInventory.storage.serializeNBT());
-            ListTag tanks = new ListTag();
-            for (var tank : shareTank.getStorages()) {
-                tanks.add(tank.serializeNBT());
+            if (!lock && !shareInventory.isEmpty()) tag.put("inv", shareInventory.storage.serializeNBT());
+            if (!shareTank.isEmpty()) {
+                ListTag tanks = new ListTag();
+                for (var tank : shareTank.getStorages()) {
+                    if (tank.isEmpty()) {
+                        tanks.add(new CompoundTag());
+                    } else tanks.add(tank.serializeNBT());
+                }
+                tag.put("tank", tanks);
+
             }
-            tag.put("tank", tanks);
-            tag.putInt("c", IntCircuitBehaviour.getCircuitConfiguration(circuitInventory.storage.getStackInSlot(0)));
+            if (!lock) {
+                var c = IntCircuitBehaviour.getCircuitConfiguration(circuitInventory.storage.getStackInSlot(0));
+                if (c > 0) tag.putInt("c", c);
+            }
+            tag.putBoolean("l", lock);
             return tag;
         }
 
@@ -587,28 +682,37 @@ public class MEPatternBufferPartMachine extends MEPatternPartMachineKt<MEPattern
             ListTag items = tag.getList("inventory", Tag.TAG_COMPOUND);
             for (Tag t : items) {
                 if (!(t instanceof CompoundTag ct)) continue;
-                var stack = ItemStack.of(ct);
-                var count = ct.getLong("real");
-                if (!stack.isEmpty() && count > 0) {
-                    itemInventory.put(stack, count);
+                var stack = AEItemKey.fromTag(ct);
+                if (stack == null) continue;
+                var amount = ct.getLong("real");
+                if (amount > 0) {
+                    itemInventory.put(stack, amount);
                 }
             }
             ListTag fluids = tag.getList("fluidInventory", Tag.TAG_COMPOUND);
             for (Tag t : fluids) {
                 if (!(t instanceof CompoundTag ct)) continue;
-                var stack = FluidStack.loadFluidStackFromNBT(ct);
+                var stack = AEFluidKey.fromTag(ct);
+                if (stack == null) continue;
                 var amount = ct.getLong("real");
-                if (!stack.isEmpty() && amount > 0) {
+                if (amount > 0) {
                     fluidInventory.put(stack, amount);
                 }
             }
-            shareInventory.storage.deserializeNBT(tag.getCompound("inv"));
-            ListTag tanks = tag.getList("tank", Tag.TAG_COMPOUND);
-            for (int i = 0; i < tanks.size(); i++) {
-                var tank = shareTank.getStorages()[i];
-                tank.deserializeNBT(tanks.getCompound(i));
+            if (tag.tags.get("inv") instanceof CompoundTag inv) {
+                shareInventory.storage.deserializeNBT(inv);
             }
-            circuitInventory.storage.setStackInSlot(0, IntCircuitBehaviour.stack(tag.getInt("c")));
+            if (tag.tags.get("tank") instanceof ListTag tanks) {
+                for (int i = 0; i < tanks.size(); i++) {
+                    var t = tanks.getCompound(i);
+                    if (t.isEmpty()) continue;
+                    var tank = shareTank.getStorages()[i];
+                    tank.deserializeNBT(t);
+                }
+            }
+            var c = tag.getInt("c");
+            if (c > 0) circuitInventory.storage.setStackInSlot(0, IntCircuitBehaviour.stack(c));
+            setLock(tag.getBoolean("l"));
         }
 
         @Override
@@ -622,30 +726,16 @@ public class MEPatternBufferPartMachine extends MEPatternPartMachineKt<MEPattern
         }
     }
 
-    public static final class InputSink implements IPatternDetails.PatternInputSink {
-
-        private final InternalSlot slot;
-        private Predicate<ItemStack> itemCallback = i -> false;
-
-        private InputSink(InternalSlot slot) {
-            this.slot = slot;
-        }
+    private record InputSink(InternalSlot slot) implements IPatternDetails.PatternInputSink {
 
         @Override
-        public void pushInput(AEKey key, long amount) {}
-
-        public void pushInput(@Nullable Object stack, long amount) {
-            if (amount <= 0L) return;
-            if (stack instanceof ItemStack itemStack) {
-                if (itemCallback.test(itemStack)) return;
-                slot.itemInventory.addTo(itemStack, amount);
-            } else if (stack instanceof FluidStack fluidStack) {
-                slot.fluidInventory.addTo(fluidStack, amount);
+        public void pushInput(AEKey key, long amount) {
+            if (amount < 1) return;
+            if (key instanceof AEItemKey itemKey) {
+                slot.itemInventory.addTo(itemKey, amount);
+            } else if (key instanceof AEFluidKey fluidKey) {
+                slot.fluidInventory.addTo(fluidKey, amount);
             }
-        }
-
-        void setItemCallback(final Predicate<ItemStack> itemCallback) {
-            this.itemCallback = itemCallback;
         }
     }
 }
